# Text-Summarization-Gemini-fastapi

./: .gitignore  DOCUMENTATION.md  NOTES.md  README.md  Text_Summarisation_fastapi.ipynb  architecture_diagram.mmd  main.py  pyproject.toml  requirements.txt  summarization_walkthrough.ipynb
app/: main.py
