[project]
name = "text-summarisation-gemini-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi>=0.110.0",
    "google-generativeai>=0.6.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.29.0",
]
